# srba-stereo-slam

./: CMakeLists.txt  README.md
demo/: config_img_dir_example.ini  config_imgdir_kitti_srba.ini
src/: CBoWManager.h  CMakeLists.txt  CSRBAStereoSLAMEstimator.cpp  CSRBAStereoSLAMEstimator.h  CStereoSLAMKF.cpp  CStereoSLAMKF.h  rba-stereoSLAM-common.h  rba-stereoSLAM.h  rba-stereoSLAM_main.cpp  rba-stereoSLAM_utils.cpp  rba-stereoSLAM_utils.h  srba-stereo-slam.h  srba-stereo-slam_common.h  srba-stereo-slam_main.cpp  srba-stereo-slam_utils.cpp  srba-stereo-slam_utils.h
